Prevent horizontal scrolling of preview
The header may have to extend beyond the available space due to negative margin.

--- a/src/styles/image.css
+++ b/src/styles/image.css
@@ -1,6 +1,6 @@
 .image {
   border-radius: 5px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
   height: auto;
   margin-bottom: 1em;
   max-width: 100%;
